  KnnVectorFieldExistsQuery. (Zach Chen, Adrien Grand)

* LUCENE-10561: Reduce class/member visibility of all normalizer and stemmer classes. (Rushabh Shah)

* LUCENE-10266: Move nearest-neighbor search on points to core. (Rushabh Shah)

* LUCENE-10603: Remove SortedSetDocValues#NO_MORE_ORDS definition. (Greg Miller)

New Features
---------------------

* LUCENE-10010 Introduce NFARunAutomaton to run NFA directly. (Patrick Zhai)

* LUCENE-10151 Enable timeout support in IndexSearcher. (Deepika Sharma)

* LUCENE-10626 Hunspell: add tools to aid dictionary editing:
  analysis introspection, stem expansion and stem/flag suggestion (Peter Gromov)

Improvements
---------------------

* LUCENE-10416: Update Korean Dictionary to mecab-ko-dic-2.1.1-20180720 for Nori.
  (Uihyun Kim)

* LUCENE-10216: Use MergePolicy to define and MergeScheduler to trigger the reader merges
  required by addIndexes(CodecReader[]) API. (Vigya Sharma, Michael McCandless)

* LUCENE-10614: Properly support getTopChildren in RangeFacetCounts. (Yuting Gan)

* LUCENE-10652: Add a top-n range faceting example to RangeFacetsExample. (Yuting Gan)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------

* LUCENE-10599: LogMergePolicy is more likely to keep merging segments until
  they reach the maximum merge size. (Adrien Grand)

Other
---------------------
* LUCENE-10283: The minimum required Java version was bumped from 11 to 17.
  (Adrien Grand, Uwe Schindler, Dawid Weiss, Robert Muir)

* LUCENE-10253: The @BadApple annotation has been removed from the test
  framework. (Adrien Grand)

* LUCENE-10393: Unify binary dictionary and dictionary writer in Kuromoji and Nori.
  (Tomoko Uchida, Robert Muir)

* LUCENE-10475: Merge dictionary builders in `util` package into `dict` package in Kuromoji and Nori.
  All classes in `org.apache.lucene.analysis.[ja|ko].util` was moved to `org.apache.lucene.analysis.[ja|ko].dict`.
  (Tomoko Uchida)
