@@ -167,8 +167,7 @@ public class TestTermsEnum2 extends LuceneTestCase {
       String reg = AutomatonTestUtil.randomRegexp(random());
       Automaton automaton = new RegExp(reg, RegExp.NONE).toAutomaton();
       automaton = Operations.determinize(automaton, Operations.DEFAULT_DETERMINIZE_WORK_LIMIT);
-      CompiledAutomaton ca =
-          new CompiledAutomaton(automaton, Operations.isFinite(automaton), false);
+      CompiledAutomaton ca = new CompiledAutomaton(automaton, false, false);
       TermsEnum te = MultiTerms.getTerms(reader, "field").intersect(ca, null);
       Automaton expected =
           Operations.determinize(
