@@ -22,6 +22,7 @@ import java.util.Collections;
 import java.util.List;
 import org.apache.lucene.tests.util.LuceneTestCase;
 import org.apache.lucene.tests.util.TestUtil;
+import org.apache.lucene.tests.util.automaton.AutomatonTestUtil;
 
 /**
  * Not thorough, but tries to test determinism correctness somewhat randomly, by determinizing a
@@ -49,7 +50,7 @@ public class TestDeterminizeLexicon extends LuceneTestCase {
     Collections.shuffle(automata, random());
     Automaton lex = Operations.union(automata);
     lex = Operations.determinize(lex, 1000000);
-    assertTrue(Operations.isFinite(lex));
+    assertTrue(AutomatonTestUtil.isFinite(lex));
     for (String s : terms) {
       assertTrue(Operations.run(lex, s));
     }
